# l3pbatchconfig

./: CMakeLists.txt  l3pbatchconfig.qrc  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
